# llm-testing-roadmap-rp

./: .gitignore  CITATION.cff  README.md  index.html  pyproject.toml
css/: styles.css
dashboard/css/: styles.css
dashboard/data/: conference_coords.json
dashboard/js/: charts.js  citation.js  data.js  export.js  main.js  table.js
data/: Papers.csv  articlecorpus.csv  conference_urls.json  validation.csv
js/: charts.js  citation.js  data.js  export.js  main.js  table.js
retrieval/: core.py
